Fix layout jump on link hover with transparent border
Added transparent 3px bottom border to .options li a in normal state.
When hovering, the existing a:hover rule changes border to blue without
changing size, preventing the layout from jumping.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -668,6 +668,7 @@ div.journals-a-z>span>a {
 	font-size: 16px;
 	font-weight: 600;
 	text-decoration: none;
+	border-bottom: 3px solid transparent;
 }
 
 input[type="radio"] {
